# SDRPlusPlus

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CODEOWNERS  CODE_OF_CONDUCT  README.md  SCANNER_CHANGELOG.md  SCANNER_MODULE.md  check_clang_format.sh  cmake_uninstall.cmake.in  config.json  contributing.md  create_root.bat  create_root.sh  make_debian_package.sh  make_fedora_package.sh  make_macos_bundle.sh  make_macos_dotapp.sh  make_macos_dotapp_new.sh  make_macos_package.sh  make_windows_package.ps1  module_list.json  prepare_bin.sh  prepare_root.bat  prepare_root.sh  readme.md  rpi_install.sh  run_clang_format.sh  sdrpp.desktop  sdrpp_debian_aarch64.deb  sdrpp_module.cmake  test  test.c
ArcaleServer_source/: CMakeLists.txt
ArcaleServer_source/src/: ArcaleRFServer.h  main.cpp
airspy_hf_source/: CMakeLists.txt
airspy_hf_source/src/: main.cpp
airspy_source/: CMakeLists.txt
airspy_source/src/: main.cpp
airspyhf_source/: CMakeLists.txt
airspyhf_source/src/: main.cpp
audio_sink/: CMakeLists.txt
audio_sink/src/: main.cpp
bladerf_source/: CMakeLists.txt
bladerf_source/src/: main.cpp
core/: CMakeLists.txt
core/backends/android/: android_backend.h  backend.cpp  keybinds.h
core/backends/glfw/: backend.cpp  keybinds.h
core/libcorrect/: .appveyor-install-tools.cmd  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
core/libcorrect/include/: correct.h
core/libcorrect/src/: CMakeLists.txt  fec_shim.c
core/libcorrect/tests/: CMakeLists.txt  convolutional-fec.c  convolutional-shim.c  convolutional-sse.c  convolutional.c  reed-solomon-fec-interop.c  reed-solomon-shim-interop.c  reed-solomon.c  rs_tester.c  rs_tester_fec.c  rs_tester_fec_shim.c
core/libcorrect/tools/: CMakeLists.txt  find_conv_libfec_poly.c  find_conv_optim_poly.c  find_conv_optim_poly_annealing.c  find_rs_primitive_poly.c
core/libcorrect/util/: CMakeLists.txt  error-sim-fec.c  error-sim-shim.c  error-sim-sse.c  error-sim.c
core/src/: audio.cpp  backend.h  bandplan.cpp  command_args.cpp  command_args.h  config.cpp  config.h  core.cpp  core.h  credits.cpp  credits.h  event.h  frequency_select.cpp  glfw_window.h  icons.cpp  json.hpp  main_window.cpp  module.cpp  module.h  module_com.cpp  module_com.h  new_module.cpp  new_module.h  options.cpp  options.h  scripting.cpp  scripting.h  server.cpp  server.h  server_protocol.h  signal_path.cpp  style.cpp  style.h  version.h  vfo_manager.h  waterfall.cpp
core/src/dsp/: audio.h  block.h  buffer.h  chain.h  clock_recovery.h  compression.h  conversion.h  convertion.h  correction.h  decimation.h  deframing.h  demodulator.h  falcon_fec.h  falcon_packet.h  filter.h  hier_block.h  interpolation_taps.h  link.h  math.h  measure.h  noise_reduction.h  operator.h  pll.h  processing.h  processor.h  resampling.h  routing.h  sink.h  source.h  stereo_fm.h  stream.h  types.h  vfo.h  window.h
core/src/duktape/: duk_config.h
core/src/gui/: bandplan.cpp  bandplan.h  colormaps.cpp  colormaps.h  file_dialogs.h  frequency_select.cpp  gui.cpp  gui.h  icons.cpp  icons.h  main_window.cpp  main_window.h  menu.cpp  menu.h  smgui.cpp  smgui.h  style.cpp  style.h  theme_manager.cpp  theme_manager.h  tuner.cpp  tuner.h  waterfall.cpp  waterfall.h
core/std_replacement/: filesystem
demo/: CMakeLists.txt
demo/src/: main.cpp
dev_portaudio_sink/: CMakeLists.txt
dev_portaudio_sink/src/: audio_device.h  main.cpp  portaudio_interface.cpp  portaudio_interface.h
discord/: CMakeLists.txt
discord-integration/: CMakeLists.txt
discord-integration/src/: main.cpp
discord/src/: main.cpp
discord_integration/: CMakeLists.txt
discord_integration/discord-rpc/: CMakeLists.txt
discord_integration/src/: main.cpp
falcon9_decoder/: CMakeLists.txt
falcon9_decoder/src/: main.cpp
file_source/: CMakeLists.txt
file_source/src/: main.cpp  wavreader.h
hackrf_source/: CMakeLists.txt
hackrf_source/src/: main.cpp
lib/: SoapySDR.lib
libsddc_source/: CMakeLists.txt
libsddc_source/src/: main.cpp
m17_decoder/: CMakeLists.txt
m17_decoder/src/: base40.cpp  base40.h  crc16.h  golay24.h  lsf_decode.cpp  m17dsp.h  main.cpp
meteor_demodulator/: CMakeLists.txt
meteor_demodulator/src/: main.cpp  meteor_demodulator_interface.h
modules/: CMakeLists.txt
modules/airspy_source/: CMakeLists.txt
modules/airspyhf_source/: CMakeLists.txt
modules/audio_sink/: CMakeLists.txt
modules/bladerf_source/: CMakeLists.txt
modules/demo/: CMakeLists.txt
modules/demo_module/: CMakeLists.txt
modules/discord_integration/: CMakeLists.txt
modules/frequency_manager/: CMakeLists.txt
modules/hackrf_source/: CMakeLists.txt
modules/limesdr_source/: CMakeLists.txt
modules/meteor_demodulator/: CMakeLists.txt
modules/new_portaudio_sink/: CMakeLists.txt
modules/plutosdr_source/: CMakeLists.txt
modules/portaudio_sink/: CMakeLists.txt
modules/radio/: CMakeLists.txt
modules/recorder/: CMakeLists.txt
modules/rigctl_server/: CMakeLists.txt
modules/rtl_sdr_source/: CMakeLists.txt
modules/rtl_tcp_source/: CMakeLists.txt
modules/scanner/: CMakeLists.txt
modules/sddc_source/: CMakeLists.txt
modules/sdrplay_source/: CMakeLists.txt
modules/spyserver_source/: CMakeLists.txt
modules/weather_sat_decoder/: CMakeLists.txt
plutosdr_source/: CMakeLists.txt
plutosdr_source/src/: main.cpp
portaudio_sink/: CMakeLists.txt
portaudio_sink/src/: main.cpp
radio/: CMakeLists.txt
radio/src/: am_demod.h  cw_demod.h  dsb_demod.h  fm_demod.h  lsb_demod.h  main.cpp  path.cpp  path.h  radio_demod.h  radio_interface.h  raw_demod.h  usb_demod.h  wfm_demod.h
recorder/: CMakeLists.txt
recorder/src/: main.cpp  recorder_interface.h  wav.h
rigctl_server/: CMakeLists.txt
rigctl_server/src/: main.cpp
rtaudio_sink/: CMakeLists.txt
rtaudio_sink/src/: main.cpp
rtl_sdr_source/: CMakeLists.txt
rtl_sdr_source/src/: main.cpp
rtl_tcp_source/: CMakeLists.txt
rtl_tcp_source/src/: main.cpp  rtltcp_client.h
rx888_source/: CMakeLists.txt
rx888_source/src/: main.cpp
scanner/: CMakeLists.txt
scanner/src/: main.cpp
(+1003 files in other folders)
